bug 1304660 - Don't dispatch to main once xpcom starts shutting down. r=froydnj

If we manage to dispatch to main after xpcom shutdown, the main thread won't
care for our new runnable and leak it.

MozReview-Commit-ID: 8t4hOgfgEeP